--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -9,12 +9,12 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="Genius clone"
+        android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.geniusclone.game.android.AndroidLauncher"
-            android:label="Genius clone"
-            android:screenOrientation="portrait"
+            android:label="@string/app_name" 
+            android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
